force-app/main/default/objects/TrxPlanCashAdvance__c/TrxPlanCashAdvance__c.object-meta.xml
<CustomObject>
    <label>TRX Plan+Cash Advance</label>
    <nameField>
        <displayFormat>TPCA-{000000}</displayFormat>
        <label>TRX PLAN+CASH ADVANCE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRX Plan+Cash Advance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>