force-app/main/default/objects/TrxPlanCashAdvance__c/fields/AdvancePaymentStatusFormu__c.field-meta.xml
<CustomField>
    <fullName>AdvancePaymentStatusFormu__c</fullName>
    <formula>text(TrxPlanID__r.PaymentRequestStatus__c)</formula>
    <label>Advance Payment Status-Formula</label>
    <type>Text</type>
</CustomField>