force-app/main/default/objects/TrxPlanCashAdvance__c/fields/AmountAdvancedPaidFCYCA__c.field-meta.xml
<CustomField>
    <fullName>AmountAdvancedPaidFCYCA__c</fullName>
    <label>Amount Advance Paid(FCYl)-Cash Advance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>