force-app/main/default/objects/TrxPlanCashAdvance__c/fields/AmountAdvancedPaidFCYFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountAdvancedPaidFCYFormu__c</fullName>
    <formula>IF( text(TrxPlanID__r.PaymentRequestStatus__c) =&quot;Liquidation Request Processed&quot;, 0, TrxPlanID__r.AmountAdvancedPaidFCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Advance Paid(FCY)-Formu</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>