force-app/main/default/objects/TrxPlanCashAdvance__c/fields/CashAdvanceID__c.field-meta.xml
<CustomField>
    <fullName>CashAdvanceID__c</fullName>
    <label>Cash Advance ID</label>
    <referenceTo>CashAdvance__c</referenceTo>
    <relationshipLabel>TRX PLAN+CASH ADVANCE</relationshipLabel>
    <relationshipName>TrxPlanCashAdvance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>